tree-sitter-ix/grammar.js
    source_file: ($) =>
      choice(
        seq(
          $.module_header,
          repeat($._module_statement),
          $.module_return_statement,
        ),
        repeat1($._module_statement),
      ),

    module_header: ($) =>
      seq(
        "module",
        field("parameters", $.parameter_list),
        "where",
      ),

    _module_statement: ($) =>
      choice(
        $.declare_effect_statement,
        $.effect_statement,
        $.declare_record_statement,
        $.type_declaration_statement,
        $.module_binding_statement,
        $.effect_binding_statement,
        $.resume_dup_statement,
        $.binding_statement,
        $.type_pattern_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.index_assignment,
        $.assignment,
        $.expression_statement,
      ),

    _statement: ($) =>
      choice(
        $.effect_binding_statement,
        $.resume_dup_statement,
        $.binding_statement,
        $.type_pattern_statement,
        $.return_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.index_assignment,
        $.assignment,
        $.expression_statement,
      ),

    binding_statement: ($) =>
      seq(
        field("kind", choice("let", "const")),
        optional(field("recursive", "rec")),
        optional(field("linear", "!")),
        field(
          "name",
          choice(
            $.identifier,
            $.wildcard,
            $.destructuring_pattern,
            $.array_pattern,
            $.positional_product_pattern,
            $.named_product_pattern,
          ),
        ),
        optional(seq(":", field("type", $.type_reference))),
        "=",
        field("value", $._expression),
      ),

    destructuring_pattern: ($) =>
      seq(
        "{",
        optional(
          commaSep1(field("name", choice($.identifier, $.wildcard))),
        ),
        "}",
      ),

    effect_row: ($) => $._effect_row_expression,

    _effect_row_expression: ($) =>
      choice(
        $.effect_union_expression,
        $.effect_intersection_expression,
        $.effect_difference_expression,
        $.parenthesized_effect_expression,
        $.effect_family_reference,
        $.effect_row_variable,
        $.effect_operation_reference,
      ),

    effect_union_expression: ($) =>
      prec.left(
        PREC.EFFECT_UNION,
        seq(
          field("left", $._effect_row_expression),
          "|",
          field("right", $._effect_row_expression),
        ),
      ),

    effect_intersection_expression: ($) =>
      prec.left(
        PREC.EFFECT_INTERSECTION,
        seq(
          field("left", $._effect_row_expression),
          "&",
          field("right", $._effect_row_expression),
        ),
      ),

    effect_difference_expression: ($) =>
      prec.left(
        PREC.EFFECT_DIFFERENCE,
        seq(
          field("left", $._effect_row_expression),
          "\\",
          field("right", $._effect_row_expression),
        ),
      ),

    parenthesized_effect_expression: ($) =>
      seq("(", field("value", $._effect_row_expression), ")"),

    effect_family_reference: ($) => field("effect", $.effect_identifier),

    effect_row_variable: ($) => field("name", $.row_variable),

    effect_operation_reference: ($) =>
      seq(
        field("effect", $.effect_identifier),
        ".",
        field("operation", $.identifier),
      ),

    effect_binding_statement: ($) =>
      seq(
        field("name", choice($.identifier, $.wildcard, $.unit_pattern)),
        "<-",
        field("value", $._expression),
      ),

    resume_dup_statement: ($) =>
      seq(
        "let",
        "(",
        "!",
        field("left", $.identifier),
        ",",
        "!",
        field("right", $.identifier),
        ")",
        "=",
        "dup",
        field("value", $.linear_reference),
      ),

    unit_pattern: () => seq("(", ")"),

    declare_effect_statement: ($) =>
      seq(
        "declare",
        "effect",
        field("name", $.effect_identifier),
        field("operations", $.effect_operation_block),
      ),

    effect_statement: ($) =>
      seq(
        "effect",
        field("name", $.effect_identifier),
        field("operations", $.effect_operation_block),
      ),

    effect_operation_block: ($) =>
      seq(
        "{",
        repeat(seq($.effect_operation, optional(","))),
        "}",
      ),

    effect_operation: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("parameters", $.host_parameter_list),
        "=>",
        field("result", $.host_result),
      ),

    declare_record_statement: ($) =>
      seq(
        "declare",
        field("name", $.identifier),
        field("fields", $.type_field_block),
      ),

    type_declaration_statement: ($) =>
      seq(
        "type",
        field("name", $.identifier),
        repeat(field("parameter", $.identifier)),
        "=",
        field(
          "definition",
          choice($.type_sum, $.type_product, $.type_reference),
        ),
      ),

    host_parameter_list: ($) =>
      seq("(", optional(commaSep1($.host_parameter)), ")"),

    host_parameter: ($) =>
      choice(
        seq(
          field(
            "contract",
            choice("&", "#", "scalar"),
          ),
          field("type", alias($.identifier, $.type_reference)),
        ),
        field("type", alias($.identifier, $.type_reference)),
      ),

    host_result: ($) =>
      choice(
        seq(
          field(
            "contract",
            choice("#", "scalar"),
          ),
          field("type", alias($.identifier, $.type_reference)),
        ),
        field("type", alias($.identifier, $.type_reference)),
      ),

    module_return_statement: ($) =>
      seq("return", field("exports", $.object_literal)),

    break_statement: ($) =>
      choice(
        "break",
        seq(
          "break",
          token.immediate(/[ \t]+/),
          field("value", $._expression),
        ),
      ),

    assignment: ($) =>
      seq(
        field("name", $.identifier),
        field("operator", choice("=", ":=")),
        field("value", $._expression),
      ),

    for_statement: ($) =>
      choice(
        seq(
          "for",
          field("first", choice($.identifier, $.wildcard)),
          optional(seq(",", field("second", choice($.identifier, $.wildcard)))),
          "in",
          field("start_or_collection", $.condition_expression),
          optional(
            seq(
              "..",
              field("end", $.condition_expression),
              optional(seq("by", field("step", $.condition_expression))),
            ),
          ),
          field("body", prec.dynamic(10, $.block)),
        ),
        seq(
          "for",
          field("start", $.condition_expression),
          "..",
          field("end", $.condition_expression),
          optional(seq("by", field("step", $.condition_expression))),
          field("body", prec.dynamic(10, $.block)),
        ),
      ),

    expression_statement: ($) => $._expression,

    _expression: ($) =>
      choice(
        $.try_with_expression,
        $.loop_expression,
        $.arrow_function,
        $.recursive_function,
        $.recursive_call_expression,
        $.if_expression,
        $.match_expression,
        $.binary_expression,
        $.is_expression,
        $.as_expression,
        $.unary_expression,
        $.application_expression,
        $.postfix_expression,
        $.effect_handler_expression,
      ),

    try_with_expression: ($) =>
      prec.right(
        PREC.ARROW,
        seq(
          "try",
          field("body", $._expression),
          "with",
          field("handler", $._expression),
        ),
      ),

    arrow_function: ($) =>
      prec.right(
        PREC.ARROW,
        seq(
          field("parameters", choice($.parameter, $.parameter_list)),
          "=>",
          field("body", $._expression),
        ),
      ),

    recursive_function: ($) =>
      prec.right(
        PREC.ARROW,
        seq(
          "rec",
          field(
            "parameters",
            choice($.identifier, $.wildcard, $.parameter_list),
          ),
          "=>",
          field("body", $._expression),
        ),
      ),

    recursive_call_expression: ($) =>
      prec.left(
        PREC.APPLICATION,
        seq("rec", field("argument", $.positional_product)),
      ),

    parameter_list: ($) => seq("(", optional(commaSep1($.parameter)), ")"),

    parameter: ($) =>
      seq(
        optional("const"),
        optional("!"),
        field("name", choice($.identifier, $.wildcard)),
        optional(seq(":", field("type", $.type_reference))),
      ),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          choice(
            ifLetCondition($),
            seq("(", ifLetCondition($), ")"),
            field("condition", $.condition_expression),
          ),
          field("consequence", prec.dynamic(10, $.block)),
          optional(
            seq(
              "else",
              field(
                "alternative",
                choice(
                  prec.dynamic(10, $.block),
                  prec.dynamic(10, $.if_expression),
                ),
              ),
            ),
          ),
        ),
      ),

    union_pattern: ($) =>
      seq(
        ".",
        field("case", $.identifier),
        optional(
          seq("(", field("value", choice($.identifier, $.wildcard)), ")"),
        ),
      ),

    condition_expression: ($) =>
      choice(
        $.condition_binary_expression,
        $.condition_is_expression,
        $.condition_unary_expression,
        $.condition_call_expression,
        $.condition_field_expression,
        $.condition_index_expression,
        $.condition_parenthesized_expression,
        $.number,
        $.string,
        $.character,
        $.boolean,
        $.atom_expression,
        alias("loop", $.identifier),
        $.identifier,
        alias($.effect_identifier, $.identifier),
        $.linear_reference,
        $.union_case,
      ),

    condition_binary_expression: ($) => {
      const table = [
        ["||", PREC.OR],
        ["&&", PREC.AND],
        [choice("==", "!="), PREC.EQUALITY],
        [choice("<", "<=", ">", ">="), PREC.COMPARE],
        [choice("+", "-"), PREC.ADD],
        [choice("*", "/", "%"), PREC.MULTIPLY],
      ];

      return choice(
        ...table.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.condition_expression),
              field("operator", operator),
              field("right", $.condition_expression),
            ),
          )
        ),
      );
    },

    condition_call_expression: ($) =>
      prec.left(
        PREC.APPLICATION,
        seq(
          field("function", $.condition_expression),
          field("argument", $.parenthesized_or_product),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        ["||", PREC.OR],
        ["&&", PREC.AND],
        [choice("==", "!="), PREC.EQUALITY],
        [choice("<", "<=", ">", ">="), PREC.COMPARE],
        [choice("+", "-"), PREC.ADD],
        [choice("*", "/", "%"), PREC.MULTIPLY],
      ];

      return choice(
        ...table.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          )
        ),
      );
    },

    as_expression: ($) =>
      prec.left(
        PREC.POSTFIX + 1,
        seq(
          field("value", $._expression),
          $.as_keyword,
          field("type", $.type_reference),
        ),
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          field(
            "operator",
            choice("-", "!", "&", "freeze", "comptime"),
          ),
          field("operand", $._expression),
        ),
      ),

    loop_expression: ($) =>
      prec(PREC.APPLICATION + 1, seq("loop", field("body", $.block))),

    match_expression: ($) =>
      prec.right(
        seq(
          "match",
          field("target", $.condition_expression),
          field("cases", $.match_case_block),
        ),
      ),

    match_case_block: ($) =>
      seq(
        "{",
        $.match_case,
        repeat(seq(optional(","), $.match_case)),
        optional(","),
        "}",
      ),

    match_case: ($) =>
      seq(
        "|",
        field("pattern", $._match_pattern),
        optional(seq("if", field("guard", $.condition_expression))),
        "=>",
        field("body", $._expression),
      ),

    _match_pattern: ($) =>
      choice(
        $.type_pattern,
        $.union_pattern,
        $.number,
        $.string,
        $.character,
        $.boolean,
        $.identifier,
        $.wildcard,
        $.array_pattern,
        $.positional_product_pattern,
        $.named_product_pattern,
      ),

    application_expression: ($) =>
      prec.left(
        PREC.APPLICATION,
        choice(
          seq(
            field(
              "function",
              choice($.application_expression, $.postfix_expression),
            ),
            $._application_space,
            field("argument", $.postfix_expression),
          ),
          seq(
            field(
              "function",
              choice($.application_expression, $.postfix_expression),
            ),
            field("argument", $.parenthesized_or_product),
          ),
        ),
      ),

    postfix_expression: ($) =>
      choice(
        $.field_expression,
        $.index_expression,
        $.update_expression,
        $._primary_expression,
      ),

    field_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        choice(
          seq(
            field("object", $.postfix_expression),
            ".",
            field("field", $.identifier),
          ),
          seq(
            field("object", alias($.effect_identifier, $.identifier)),
            ".",
            field("field", $.identifier),
          ),
        ),
      ),

    struct_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("base", $.postfix_expression),
          field("fields", $.field_block),
        ),
      ),

    update_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("value", $.postfix_expression),
          $.with_keyword,
          field("updates", $.field_block),
        ),
      ),

    _primary_expression: ($) =>
      choice(
        $.number,
        $.string,
        $.character,
        $.boolean,
        alias("loop", $.identifier),
        $.identifier,
        alias($.effect_identifier, $.identifier),
        $.atom_expression,
        $.import_expression,
        $.named_product,
        $.positional_product,
        $.union_case,
        $.linear_reference,
        $.unit_pattern,
        $.struct_type,
        $.union_type,
        $.array_expression,
        $.array_repeat_expression,
        $.object_literal,
        $.scratch_expression,
        $.block,
        $.parenthesized_expression,
      ),

    linear_reference: ($) => seq("!", field("name", $.identifier)),

    import_expression: ($) => seq("import", field("path", $.string)),

    named_product: ($) => prec(1, seq("(", commaSep1($.product_field), ")")),

    product_field: ($) =>
      seq(
        $._named_product_dot,
        field("name", $.identifier),
        "=",
        field("value", $._expression),
      ),

    positional_product: ($) => seq("(", commaSep2($._expression), ")"),

    array_spread: ($) => seq("...", field("value", $._expression)),

    object_literal: ($) => field("fields", $.field_block),

    wildcard: () => "_",
